<resources>
    <string name="app_name">travelplan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fullname">Fullname</string>
    <string name="email">E-mail</string>
    <string name="login">Login B-Travel Plan</string>
    <string name="btnlogin">Login</string>
    <string name="createacc">Create a new account?</string>
    <string name="signup">Signup B-Travel Plan</string>
    <string name="btnsignup2">Have an account?</string>
    <string name="btnsignup">Signup</string>
    <string name="nexttologin">here</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_travel">Travel</string>
    <string name="title_trip">Trip</string>
    <string name="title_me">Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">1Hello blank fragment1******</string>
    <string name="hello_blank_fragment2">2Hello blank fragment2++++++++++</string>
    <string name="hello_blank_fragment3">3Hello blank fragment3-----------</string>

    <string name="urlserver">http://pharadorn.lnw.mn/API/markers.php</string>
</resources>